[package]
name = "coinbase-v1-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "rustls"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"]}
