[package]
name = "coinbase-v1-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
jwt-compact = "0.8.0"
p256 = "0.13.2"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "rustls"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"]}
